update-email controller